--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>
       <div>
         <p class="vision">The Vision of Future</p>
-        <p>
+        <p class="bangladesh">
           Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
           cutting-edge technology, promoting inclusive growth, and ensuring
           sustainability. With initiatives in renewable energy, digital
@@ -37,34 +37,50 @@
         <div class="samephoto">
           <div class="secondimg">
             <img src="./assets/card-icon.png" alt="" />
-            <p>Digital Transformation</p>
-            <p>
+            <p class="dig">Digital Transformation</p>
+            <p class="psame all">
               Creating a nationwide digital ecosystem to enhance connectivity
               and access to services for all citizens.
             </p>
             <br />
-            <button>Learn More</button>
+            <button class="vision-btn blue">Learn More</button>
           </div>
           <div class="thirdimg">
             <img src="./assets/card-icon.png" alt="" />
-            <p>Green Energy</p>
-            <p>
+            <p class="grn">Green Energy</p>
+            <p class="psame eco">
               Investments in solar and wind energy to ensure a sustainable and
               eco-friendly future.
             </p>
             <br />
-            <button>Learn More</button>
+            <button class="vision-btn green">Learn More</button>
           </div>
           <div class="fourthimg">
             <img src="./assets/card-icon.png" alt="" />
-            <p>Modern Infrastructure</p>
-            <p>
+            <p class="mrdn">Modern Infrastructure</p>
+            <p class="psame art">
               Building state-of-the-art infrastructure to support economic
               growth and global competitiveness.
             </p>
             <br />
-            <button>Learn More</button>
+            <button class="vision-btn yellow">Learn More</button>
           </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h1 class="rcn">Recent News</h1>
+        <p class="aim">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+        <div>
+          <div></div>
+          <div></div>
         </div>
       </div>
     </section>
