--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div>
         <p class="vision">The Vision of Future</p>
@@ -68,6 +69,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div>
         <h1 class="rcn">Recent News</h1>
@@ -78,9 +80,65 @@
           transformation, and robust infrastructure, the country is set to
           become a global model of development.
         </p>
-        <div>
-          <div></div>
-          <div></div>
+      </div>
+    </section>
+
+    <section class="recent-news">
+      <div class="satja">
+        <img class="sat" src="./assets/satelite.png" alt="satelite" />
+        <div class="bngnot">
+          <h1 class="new">Bangladesh Launches New Satellite</h1>
+          <img class="jajira" src="./assets/al-jazeera.png" alt="al-jazeera" />
+          <div>
+            <span class="date">Date: 05/01/2025</span
+            ><span class="time">Time: 10.25 PM</span>
+          </div>
+          <p class="not">
+            Not until the creation and maintenance of decent conditions of life
+            for all people are recognized and accepted as a common obligation of
+            all people and all countries—not until then shall we,<br />
+            with a certain degree of justification, be able to speak of
+            humankind as civilized
+          </p>
+          <button>Read More</button>
+        </div>
+      </div>
+      <div class="satja">
+        <div class="bngnot">
+          <h1 class="new">Bangladesh Launches New Satellite</h1>
+          <img class="jajira" src="./assets/al-jazeera.png" alt="al-jazeera" />
+          <div>
+            <span class="date">Date: 05/01/2025</span
+            ><span class="time">Time: 10.25 PM</span>
+          </div>
+          <p class="not">
+            Not until the creation and maintenance of decent conditions of life
+            for all people are recognized and accepted as a common obligation of
+            all people and all countries—not until then shall we,<br />
+            with a certain degree of justification, be able to speak of
+            humankind as civilized
+          </p>
+          <button>Read More</button>
+        </div>
+        <img class="sat" src="./assets/satelite.png" alt="satelite" />
+      </div>
+      <div class="satja">
+        <img class="sat" src="./assets/satelite.png" alt="satelite" />
+        <div class="bngnot">
+          <h1 class="new">Bangladesh Launches New Satellite</h1>
+          <img class="jajira" src="./assets/al-jazeera.png" alt="al-jazeera" />
+          <div>
+            <span class="date">Date: 05/01/2025</span
+            ><span class="time">Time: 10.25 PM</span>
+          </div>
+          <p class="not">
+            Not until the creation and maintenance of decent conditions of life
+            for all people are recognized and accepted as a common obligation of
+            all people and all countries—not until then shall we,<br />
+            with a certain degree of justification, be able to speak of
+            humankind as civilized
+          </p>
+          <button>Read More</button>
         </div>
       </div>
     </section>
