compleated donate section

--- a/index.html
+++ b/index.html
@@ -142,5 +142,25 @@
         </div>
       </div>
     </section>
+    <section>
+      <h1 class="dnt">Donate Today</h1>
+      <p class="national">
+        Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainability. <br />
+        With initiatives in renewable energy, digital transformation, and robust
+        infrastructure.
+      </p>
+      <div class="tkbtn">
+        <div class="donate-btn">100 Taka</div>
+        <div class="donate-btn tk-200">200 Taka</div>
+        <div class="donate-btn">500 Taka</div>
+        <div class="donate-btn">1000 Taka</div>
+      </div>
+      <div class="donate-btn-container">
+        <button class="other-amount-btn">Other Amount (Taka)</button>
+        <button class="done-btn">Done Now</button>
+      </div>
+    </section>
   </body>
 </html>
