compleated subscribe section

--- a/index.html
+++ b/index.html
@@ -162,5 +162,23 @@
         <button class="done-btn">Done Now</button>
       </div>
     </section>
+    <section class="subcribe-section">
+      <div>
+        <h1 class="newsletter">Subscribe Newsletter</h1>
+        <p class="growth">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge <br />
+          technology, promoting inclusive growth.
+        </p>
+        <form action="">
+          <input
+            class="enteremail"
+            type="text"
+            placeholder="Enter your email here"
+          /><button class="subcribe">Subscribe</button>
+        </form>
+        <p class="promise-spam">We promise not to spam you!</p>
+      </div>
+    </section>
   </body>
 </html>
