compleated nav section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="headernav">
+      <h1 class="navone">Bangladesh 2.0</h1>
+      <button class="signbtn">Sign In</button>
+    </nav>
+
     <section>
       <div class="bng">
         <div>
