added hover effect

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <nav class="headernav">
-      <h1 class="navone">Bangladesh 2.0</h1>
-      <button class="signbtn">Sign In</button>
+      <p class="navone">Bangladesh 2.0</p>
+      <div>
+        <a class="nav-anchor" href="#">Home</a>
+        <a class="nav-anchor" href="#">About</a>
+        <a class="nav-anchor" href="#donate-now">Donate</a>
+        <button class="signbtn">Sign In</button>
+      </div>
     </nav>
 
     <section>
@@ -128,26 +133,25 @@
         <img class="sat" src="./assets/satelite.png" alt="satelite" />
       </div>
       <div class="satja">
-        <img class="sat" src="./assets/satelite.png" alt="satelite" />
+        <img class="sat" src="./assets/long-merch.webp" alt="satelite" />
         <div class="bngnot">
-          <h1 class="new">Bangladesh Launches New Satellite</h1>
+          <h1 class="new">Thousands march in Bangladesh</h1>
           <img class="jajira" src="./assets/al-jazeera.png" alt="al-jazeera" />
           <div>
-            <span class="date">Date: 05/01/2025</span
-            ><span class="time">Time: 10.25 PM</span>
+            <span class="date">Date: 31/12/2024</span
+            ><span class="time">Time: 08.25 PM</span>
           </div>
           <p class="not">
-            Not until the creation and maintenance of decent conditions of life
-            for all people are recognized and accepted as a common obligation of
-            all people and all countries—not until then shall we,<br />
-            with a certain degree of justification, be able to speak of
-            humankind as civilized
+            Thousands of people have rallied in Bangladesh’s capital to demand
+            the prosecution of ousted Prime Minister Sheikh Hasina and those
+            responsible for hundreds of deaths in a mass uprising against her
+            government in July.
           </p>
           <button>Read More</button>
         </div>
       </div>
     </section>
-    <section>
+    <section id="donate-now">
       <h1 class="dnt">Donate Today</h1>
       <p class="national">
         Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
