--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
       </div>
     </section>
 
+    <section class="vision-quote">
+      <img class="quote-img" src="./assets/quote-bg.png" alt="quote-bg.png" />
+      <p class="qoute-desc">
+        “What I did not know yet about hunger, but would find out over the next
+        twenty-one years, was that brilliant theorists of economics do not find
+        it worthwhile to spend time discussing issues of poverty and hunger.
+        They believe that these will be resolved when general economic
+        prosperity increases. These economists spend all their talents detailing
+        the process of development and prosperity, but rarely reflect on the
+        origin and development of poverty and hunger. A a result, poverty
+        continues.”
+      </p>
+      <div class="data-sec">
+        <p class="author">Dr. Muhammad Yunus</p>
+        <p class="author-proff">
+          Chief Adviser of the People's Republic of Bangladesh
+        </p>
+      </div>
+    </section>
+
     <section>
       <div>
         <h1 class="rcn">Recent News</h1>
@@ -167,7 +187,12 @@
         <div class="donate-btn">1000 Taka</div>
       </div>
       <div class="donate-btn-container">
-        <button class="other-amount-btn">Other Amount (Taka)</button>
+        <input
+          class="other-amount-btn"
+          type="number"
+          placeholder="Other Amount (Taka)"
+        />
+
         <button class="done-btn">Done Now</button>
       </div>
     </section>
@@ -189,5 +214,17 @@
         <p class="promise-spam">We promise not to spam you!</p>
       </div>
     </section>
+    <footer class="fotter">
+      <div><h1 class="byebye">Bangladesh 2.0</h1></div>
+      <div class="onlyimg">
+        <a href="#"
+          ><img class="imgicon" src="./assets/facebook.png" alt=""
+        /></a>
+        <a href="#"
+          ><img class="imgicon" src="./assets/instagram.png" alt=""
+        /></a>
+        <a href="#"><img class="xpng imgicon" src="./assets/x.png" alt="" /></a>
+      </div>
+    </footer>
   </body>
 </html>
